@@ -5,6 +5,10 @@
 @section v2_05 Changes with libapreq2-2.05
 
 
+- C API [joes]
+  Add apreq_parse_xml parser, which is a simple wrapper
+  around APR's expat-based apr_xml_parser.
+
 
 @section v2_04_dev Changes with libapreq2-2.04-dev (released August 30, 2004)
 
